# robot-learning-sandbox

./: .gitignore  policy_behavior_cloning.pth  pyproject.toml
policy/: actor_critic_policy.py
robot_learning_toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: run_policy.py
scripts/data/: collect_data.py  load_data.py
scripts/imitation_learning/: pretrain_bc_actor.py  train_bc_ddpm_policy.py  train_bc_mse_policy.py
scripts/reinforcement_learning/: train_actor_critic_policy.py
scripts/tests/diffusion/: bc_ddpm_policy.pth  ddpm_policy.py  run_ddpm_policy.py  train_bc_ddpm_policy.py
training/: a2c.py  bc_mse.py  rl.py
utils/: dataset.py  mj_utils.py
